--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@
 
 # Site Settings
 title                    : "Haochen Chang"
-description              : "testtest"
-repository               : "RayeRen/acad-homepage.github.io"
+description              : "Ph.D. student of CS, SYSU"
+repository               : "1998CHC/1998chc.github.io"
 google_scholar_stats_use_cdn : true
 
 # google analytics
@@ -24,7 +24,7 @@ author:
   name             : "Haochen Chang"
   avatar           : "images/android-chrome-512x512.png"
   bio              : "Sun Yat-sen University"
-  location         : "Tianjin, China"
+  location         : "China"
   employer         : 
   pubmed           : 
   googlescholar    :
@@ -37,7 +37,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : # e.g., "github username"
+  github           : "1998CHC"
   google_plus      :
   keybase          :
   instagram        :
