--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "Haochen Chang"
-  avatar           : "images/android-chrome-512x512.png"
+  avatar           : "images/photo.png"
   bio              : "Sun Yat-sen University"
   location         : "China"
   employer         : 
